# tools

./: .gitignore  LICENSE  README.md  README.zh-CN.md  start-all.bat
.planning/codebase/: ARCHITECTURE.md  INTEGRATIONS.md  README.zh-CN.md  STACK.md  STRUCTURE.md
backend/: pyproject.toml
backend/evals/: run_scholarly_eval.py  run_scholarly_live_smoke.py
backend/evals/benchmarks/: scholarly_retrieval_sample.json
backend/src/: agent.py  config.py  main.py  models.py
backend/src/services/: reporter.py  scholarly_contracts.py  scholarly_fulltext.py  scholarly_graph.py  scholarly_llm.py  scholarly_report_pipeline.py  scholarly_rerank.py  scholarly_search.py  scholarly_store.py  scholarly_workflow.py  search.py  tool_events.py
backend/tests/: test_scholarly_graph.py
docs/: frontend-design-handoff.zh-CN.md  frontend-design-spec.zh-CN.md  frontend-redesign-yorha-inspired.zh-CN.md  resume-tech-roadmap-v2.zh-CN.md  scholarly-retrieval-tech-chain.zh-CN.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/services/: api.ts
scripts/: start-backend.bat  start-backend.ps1  start-frontend.bat
